--- a/package.json
+++ b/package.json
@@ -11,13 +11,15 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.654.0",
+    "@aws-sdk/lib-storage": "^3.654.0",
     "aws-sdk": "^2.1691.0",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.21.0",
     "mongoose": "^8.6.2",
     "multer": "^1.4.5-lts.1",
-    "multer-s3": "^3.0.1",
+    "multer-s3": "^2.10.0",
     "pg": "^8.12.0"
   },
   "devDependencies": {
