--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@aws-sdk/lib-storage": "^3.654.0",
     "aws-sdk": "^2.1691.0",
     "cors": "^2.8.5",
+    "date-fns": "^4.1.0",
     "dotenv": "^16.4.5",
     "express": "^4.21.0",
     "mongoose": "^8.6.2",
