--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "mongoose": "^8.6.2",
     "multer": "^1.4.5-lts.1",
     "multer-s3": "^2.10.0",
-    "pg": "^8.12.0"
+    "pg": "^8.12.0",
+    "react-select": "^5.8.1"
   },
   "devDependencies": {
     "nodemon": "^3.1.4"
