--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,7 +19,8 @@
     "react-dom": "^18.3.1",
     "react-google-charts": "^4.0.1",
     "react-router-dom": "^6.26.1",
-    "serve": "^14.2.3"
+    "serve": "^14.2.3",
+    "react-select": "^5.8.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
